Removed the wordiness

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -80,7 +80,7 @@
 	<div class="container" id="history">
 		<table class="table table-striped">
 			<thead>
-				<td>Title</td><td>Category</td><td>Status</td><td>Site</td><td>Price (PPS/Bid)</td>
+				<td>Title</td><td>Category</td><td>Status</td><td>Site</td><td>Price</td>
 			</thead>
 			<tbody>
 				{% for item in results %}{% if item.price %}
