--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -80,7 +80,7 @@
 	<div class="container" id="history">
 		<table class="table table-striped">
 			<thead>
-				<td>Title</td><td>Category</td><td>Close</td><td>Site</td><td>Price</td>
+				<td>Title</td><td>Category</td><td>Closed</td><td>Site</td><td>QTY</td><td>Price</td>
 			</thead>
 			<tbody>
 				{% for item in results %}{% if item.price %}
@@ -101,6 +101,7 @@
 						{% endif %}
 					</td>
 					<td>{{ item.site }}</td>
+					<td>{{ item.quantity }}</td>
 					<td>{{ '%3.2f' % item.price_per_stick if item.price_per_stick else 'N/A'}}
 						<span class="text-muted">
 							<small>
