--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -3,25 +3,170 @@
 {% block content %}
 
 {% if not auctions %}
-{% block spash_content %}{% endblock %}
+<div class="container">
+	<div class="jumbotron">
+		<h4>Search</h4>
+    	<form method="POST" action="/">
+    		{{ form.hidden_tag() }}
+	        <div class="form-group">
+                <input id="search" type="text" name="search" class="form-control" placeholder="Search">
+		        <span class="input-group-addon">
+		        	<button type="submit" class="btn btn-default">Search</button>
+		        </span>
+	        </div>
+	    </form>
+	    {% if search_string %}
+	    <p>no results for <strong>{{ search_string }}</strong> found.</p>
+	    {% endif %}
+	</div>
+</div>
 {% else %}
 
 <div class="container">
 	<div class="container" id="analytics">
 		<h2>Results for <strong><i>{{ search_string }}</i></strong></h2>
 		{% if stats['display'] %}
-			{% block analysis %}{% endblock %}
+			<ul class="list-group">
+				<li class="list-group-item">
+					Best Price Per Stick
+					<span class="badge">
+						{{ '%3.2f' % stats['best'] }}
+					</span>
+				</li>
+				<li class="list-group-item">
+					Great Price Per Stick
+					<span class="badge">
+						{{ '%3.2f' % stats['great'] }}
+					</span>
+				</li>
+				<li class="list-group-item">
+					Good Price Per Stick
+					<span class="badge">
+						{{ '%3.2f' % stats['good'] }}
+					</span>
+				</li>
+				<li class="list-group-item">
+					Average Price Per Stick
+					<span class="badge">
+						{{ '%3.2f' % stats['avg'] }}
+					</span>
+				</li>
+				<li class="list-group-item">
+					Poor Price Per Stick
+					<span class="badge">
+						{{ '%3.2f' % stats['poor'] }}
+					</span>
+				</li>
+				<li class="list-group-item">
+					Bad Price Per Stick
+					<span class="badge">
+						{{ '%3.2f' % stats['bad'] }}
+					</span>
+				</li>
+				<li class="list-group-item">
+					Worst Price Per Stick
+					<span class="badge">
+						{{ '%3.2f' % stats['worst'] }}
+					</span>
+				</li>
+				<li class="list-group-item">
+					Standard Deviation
+					<span class="badge">
+						{{ '%3.2f' % stats['std_deviation'] }}
+					</span>
+				</li>
+			</ul>
 		{% endif %}
 	</div>
-	{% block trending %}{% endblock %}
-	{% block active_auctions %}{% endblock %}
-	{% block closed_auctions %}{% endblock %}
+	<div class="container" id="trends">
+		<div class="container" id="trend-placeholder" style="height:200px"></div>
+	</div>
+
+	<button class="btn btn-primary btn-sm" 
+			onclick="toggle_visibility('current-auctions');">
+		Toggle Open Auctions
+	</button>
+	<div class="container" id="current-auctions" style="display: none;">
+		<table class="table table-striped">
+			<thead>
+				<td>Title</td><td>Category</td><td>Site</td>
+			</thead>
+			<tbody>
+				{% for item in auctions %}{% if not item.finished %}
+				<tr>
+					<td>
+						{{ item.name}}
+						<span class="pull-right">
+							<a class="btn btn-info btn-xs" href="{{ item.link }}">
+								<span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
+							</a>
+						</span>
+					</td>
+					<td>{{ item.type }}</td>
+					<td>{{ item.site }}</td>
+				</tr>
+				{% endif %}{% endfor %}
+			</tbody>
+		</table>
+	</div>
+
+	<div class="container" id="history">
+		<table class="table table-striped">
+			<thead>
+				<td>Title</td><td>Category</td><td>Closed</td><td>Site</td><td>QTY</td><td>Price</td>
+			</thead>
+			<tbody>
+				{% for item in auctions %}{% if item.price and item.finished %}
+				<tr>
+					<td>
+						{{ item.name}}
+						<span class="pull-right">
+							<a class="btn btn-info btn-xs" href="{{ item.link }}">
+								<span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
+							</a>
+						</span>
+					</td>
+					<td>{{ item.type }}</td>
+					<td>{% if item.finished %}
+							{{ item.close.strftime('%Y-%m-%d') }}
+						{% else %}
+							<span class="label label-danger">OPEN</span>
+						{% endif %}
+					</td>
+					<td>{{ item.site }}</td>
+					<td><span class="pull-right">{{ item.quantity }}</span></td>
+					<td>{{ '%3.2f' % item.price_per_stick if item.price_per_stick else 'N/A'}}
+						<span class="text-muted">
+							<small>
+								/{{ '%3.2f' % item.price if item.price else 'N/A'}}
+							</small>
+					</td>
+				</tr>
+				{% endif %}{% endfor %}
+			</tbody>
+		</table>
+	</div>
 </div>
 {% endif %}
 {% endblock %}
 
-{% include "splash_content.html" %}
-{% include "price_analysis.html" %}
-{% include "trending.html" %}
-{% include "active_auctions.html" %}
-{% include "closed_auctions.html" %}
+{% block scripts %}
+{{ super() }}
+<script type="text/javascript">
+	(function($) {
+		$(function() {
+			var d = {
+				color: 'rgba(44, 62, 80, 1)',
+				data: {{ stats['trend'] }}
+			};
+			$.plot($("#trend-placeholder"), [d], {
+				xaxis: { mode: "time" },
+				series: {lines: {
+					fill: true,
+					fillColor: "rgba(44, 62, 80, 0.6)"
+				}},
+			});
+		});
+	})(jQuery);
+</script>
+{% endblock %}
