--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -37,13 +37,17 @@
         <div id="navbar-main" class="collapse navbar-collapse">
         	{% if auctions %}
         	<div class="nav navbar-nav navbar-right">
-	        	<form class="navbar-form navbar-left" role="search" method="POST" action="/">
-	        		{{ form.hidden_tag() }}
-			        <div class="form-group">
+                <form class="navbar-form navbar-left" role="search" method="POST" action="/">
+                    {{ form.hidden_tag() }}
+                    <div class="input-group">
                         <input id="search" type="text" name="search" class="form-control" placeholder="Search">
-			        </div>
-			        <button type="submit" class="btn btn-default">Search</button>
-			    </form>
+                        <span class="input-group-btn">
+                            <button type="submit" class="btn btn-default">
+                                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            </button>
+                        </span>
+                    </div>
+                </form>
 		    </div>
 		    {% endif %}
 		</div>
