--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -91,7 +91,7 @@
     <div class="container" id="current-auctions" style="display: none;">
         <table class="table table-striped">
             <thead>
-                <td>Title</td><td>Category</td><td>Site</td>
+                <td>Title</td><td>Category</td><td></td><td>Time Left</td>
             </thead>
             <tbody>
                 {% for item in auctions %}{% if not item.finished %}
@@ -105,7 +105,8 @@
                         </span>
                     </td>
                     <td>{{ item.type }}</td>
-                    <td>{{ item.site }}</td>
+                    <td><img src="{{ url_for('.static', filename='images/logos/%s' % item.site) }}" /></td>
+                    <td>{{ '%sd %sh %sm' % item.time_left }}</td>
                 </tr>
                 {% endif %}{% endfor %}
             </tbody>
@@ -118,7 +119,7 @@
                 <td>Title</td><td>Category</td><td>Closed</td><td>Site</td><td>QTY</td><td>Price</td>
             </thead>
             <tbody>
-                {% for item in auctions %}{% if item.price and item.finished %}
+                {% for item in auctions.reverse() %}{% if item.price and item.finished %}
                 <tr>
                     <td>
                         {{ item.name}}
