--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -105,7 +105,7 @@
                         </span>
                     </td>
                     <td>{{ item.type }}</td>
-                    <td><img src="{{ url_for('.static', filename='images/logos/%s' % item.site) }}" /></td>
+                    <td><img src="{{ url_for('.static', filename='images/logos/%s.png' % item.site) }}" /></td>
                     <td>{{ '%sd %sh %sm' % item.time_left }}</td>
                 </tr>
                 {% endif %}{% endfor %}
@@ -116,10 +116,10 @@
     <div class="container" id="history">
         <table class="table table-striped">
             <thead>
-                <td>Title</td><td>Category</td><td>Closed</td><td>Site</td><td>QTY</td><td>Price</td>
+                <td>Title</td><td>Category</td><td>Closed</td><td></td><td>QTY</td><td>Price</td>
             </thead>
             <tbody>
-                {% for item in auctions.reverse() %}{% if item.price and item.finished %}
+                {% for item in auctions|sort(reverse=True) %}{% if item.price and item.finished %}
                 <tr>
                     <td>
                         {{ item.name}}
@@ -136,7 +136,7 @@
                             <span class="label label-danger">OPEN</span>
                         {% endif %}
                     </td>
-                    <td>{{ item.site }}</td>
+                    <td><img src="{{ url_for('.static', filename='images/logos/%s.png' % item.site) }}" /></td>
                     <td><span class="pull-right">{{ item.quantity }}</span></td>
                     <td>{{ '%3.2f' % item.price_per_stick if item.price_per_stick else 'N/A'}}
                         <span class="text-muted">
