--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -33,7 +33,7 @@
         <h2>How can I use this?</h2>
         <ul>
             <li><strong>Word order doesnt matter</strong> - This means that the searches: <i>"arturo fuente"</i> and 
-                <i>"fuente arturo"</i> will yeild the same results.  The advantage of handling searches this way is 
+                <i>"fuente arturo"</i> will yield the same results.  The advantage of handling searches this way is 
                 that you aren't forced to remember the exact word order of something to search, and can just keep 
                 tacking on words to narrow down the search as you go.
             </li>
