--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -47,6 +47,13 @@
                 or a box of 24, you can see what the price you would be paying is on a per cigar level.  All of BidHistory's
                 analytics are leveraging these numbers to try to make this information as useful as possible.
             </li>
+            <li><strong>Filter by Auction Type</strong> - If you desire to only see 5-packs, simply add
+                <i>"category=5-pack"</i> to the search string.  Negative filtering also works like <i>"category=-5-pack"</i>.
+            </li>
+            <li><strong>Filter by Auction Site</strong> - Only want to see information from CigarBid?  That is easily done by
+                simply adding <i>"site=cigarbid"</i> to the search string.  Negative filtering also works like 
+                <i>"site=-cigarbid"</i>.
+            </li>
             <li><strong>More to come!</strong> - BidHistory is under active development and features are being tweaked,
                 improved, and added all of the time.  If you have a bug report or a feature request, please let us know 
                 on the <a href="http://github.com/stevemcgrath/bidhistory">GitHub page</a>.  Further all of the cose is 
