Yay filtering for site and categories work as expected now.

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -48,11 +48,12 @@
                 analytics are leveraging these numbers to try to make this information as useful as possible.
             </li>
             <li><strong>Filter by Auction Type</strong> - If you desire to only see 5-packs, simply add
-                <i>"category=5-pack"</i> to the search string.  Negative filtering also works like <i>"category=-5-pack"</i>.
+                <i>"category=5-pack"</i> to the search string.  Multiple items can be selected using a comma, such as:
+                <i>"category=5-pack,10-pack"</i>.
             </li>
             <li><strong>Filter by Auction Site</strong> - Only want to see information from CigarBid?  That is easily done by
-                simply adding <i>"site=cigarbid"</i> to the search string.  Negative filtering also works like 
-                <i>"site=-cigarbid"</i>.
+                simply adding <i>"site=cigarbid"</i> to the search string.  Multiple can be selected using a comma, like:
+                <i>"site=cbid,cigarauctioneer"</i>
             </li>
             <li><strong>More to come!</strong> - BidHistory is under active development and features are being tweaked,
                 improved, and added all of the time.  If you have a bug report or a feature request, please let us know 
