--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -9,6 +9,7 @@
 <script language="javascript" type="text/javascript" src="{{ url_for('.static', filename='js/jquery.min.js') }}"></script>
 <script language="javascript" type="text/javascript" src="{{ url_for('.static', filename='js/jquery.flot.min.js') }}"></script>
 <script language="javascript" type="text/javascript" src="{{ url_for('.static', filename='js/jquery.flot.time.min.js') }}"></script>
+<script language="javascript" type="text/javascript" src="{{ url_for('.static', filename='js/jquery.flot.tooltip.min.js') }}"></script>
 <script language="javascript" type="text/javascript" src="{{ url_for('.static', filename='js/bidhistory.js') }}"></script>
 {% endblock head %}
 
@@ -33,6 +34,7 @@
                      src="{{ url_for('.static', filename='images/brand.png') }}" />#}
                 BidHistory
             </a>
+            {% block totals %}{% endblock %}
         </div>
         <div id="navbar-main" class="collapse navbar-collapse">
         	{% if auctions %}
