Chrome App web link

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -55,6 +55,8 @@
                 simply adding <i>"site=cigarbid"</i> to the search string.  Multiple can be selected using a comma, like:
                 <i>"site=cbid,cigarauctioneer"</i>
             </li>
+            <li><strong><a href="https://chrome.google.com/webstore/detail/cigar-price-history/hjbommnhodlfagkpepengkjokfpanpjj">There is a Chrome Plugin!</a></strong> - <a href="https://www.reddit.com/user/mattpassini">Matt Passini</a> from the <a href="https://www.reddit.com/r/cigars">r/cigars</a> community has written a Chrome plugin to embed the statistical information from BidHistory into the various sites.  Check it out!
+            </li>
             <li><strong>More to come!</strong> - BidHistory is under active development and features are being tweaked,
                 improved, and added all of the time.  If you have a bug report or a feature request, please let us know 
                 on the <a href="http://github.com/stevemcgrath/bidhistory">GitHub page</a>.  Further all of the cose is 
