--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -32,7 +32,7 @@
             <a class="navbar-brand" href="{{ url_for('search') }}">
                 {#<img alt="{{ config.SITE_NAME }}" 
                      src="{{ url_for('.static', filename='images/brand.png') }}" />#}
-                BidHistory
+                Herf.io Cigar Bid History
             </a>
         </div>
         <div id="navbar-main" class="collapse navbar-collapse">
