--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -69,143 +69,177 @@
     <div class="container" id="analytics">
         <h2>Results for <strong><i>{{ search_string }}</i></strong></h2>
         {% if stats['display'] %}
-            <ul class="list-group">
-                <li class="list-group-item">
-                    Best Price Per Stick
-                    <span class="badge">
-                        {{ '%3.2f' % stats['best'] }}
-                    </span>
-                </li>
-                <li class="list-group-item">
-                    Great Price Per Stick
-                    <span class="badge">
-                        {{ '%3.2f' % stats['great'] }}
-                    </span>
-                </li>
-                <li class="list-group-item">
-                    Good Price Per Stick
-                    <span class="badge">
-                        {{ '%3.2f' % stats['good'] }}
-                    </span>
-                </li>
-                <li class="list-group-item">
-                    Average Price Per Stick
-                    <span class="badge">
-                        {{ '%3.2f' % stats['avg'] }}
-                    </span>
-                </li>
-                <li class="list-group-item">
-                    Poor Price Per Stick
-                    <span class="badge">
-                        {{ '%3.2f' % stats['poor'] }}
-                    </span>
-                </li>
-                <li class="list-group-item">
-                    Bad Price Per Stick
-                    <span class="badge">
-                        {{ '%3.2f' % stats['bad'] }}
-                    </span>
-                </li>
-                <li class="list-group-item">
-                    Worst Price Per Stick
-                    <span class="badge">
-                        {{ '%3.2f' % stats['worst'] }}
-                    </span>
-                </li>
-                <li class="list-group-item">
-                    Standard Deviation
-                    <span class="badge">
-                        {{ '%3.2f' % stats['std_deviation'] }}
-                    </span>
-                </li>
-            </ul>
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Price Analysis</h3>
+            </div>
+            <div class="panel-body">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        Best Price Per Stick
+                        <span class="badge">
+                            {{ '%3.2f' % stats['best'] }}
+                        </span>
+                    </li>
+                    <li class="list-group-item active">
+                        Average Price Per Stick
+                        <span class="badge">
+                            {{ '%3.2f' % stats['avg'] }}
+                        </span>
+                    </li>
+                    <li class="list-group-item">
+                        Worst Price Per Stick
+                        <span class="badge">
+                            {{ '%3.2f' % stats['worst'] }}
+                        </span>
+                    </li>
+                    <li class="list-group-item">
+                        Standard Deviation
+                        <span class="badge">
+                            {{ '%3.2f' % stats['std_deviation'] }}
+                        </span>
+                    </li>
+                </ul>
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        Great Price Per Stick
+                        <span class="badge">
+                            {{ '%3.2f' % stats['great'] }} -  {{ '%3.2f' % stats['good'] }}
+                        </span>
+                    </li>
+                    <li class="list-group-item">
+                        Good Price Per Stick
+                        <span class="badge">
+                            {{ '%3.2f' % stats['good'] }} - {{ '%3.2f' % stats['avg'] }}
+                        </span>
+                    </li>
+                    <li class="list-group-item">
+                        Poor Price Per Stick
+                        <span class="badge">
+                            {{ '%3.2f' % stats['avg'] }} - {{ '%3.2f' % stats['poor'] }}
+                        </span>
+                    </li>
+                    <li class="list-group-item">
+                        Bad Price Per Stick
+                        <span class="badge">
+                            {{ '%3.2f' % stats['poor'] }} - {{ '%3.2f' % stats['bad'] }}
+                        </span>
+                    </li>
+                </ul>
+            </div>
+        </div>
         {% endif %}
     </div>
     <div class="container" id="trends">
-        <div class="container" id="heatmap-placeholder" style="height:100px;"></div>
-        <div class="container" id="trend-placeholder" style="height:200px"></div>
-    </div>
-
-    <div class="container" id="current-auctions" style="display: none;">
-        <table class="table table-striped">
-            <thead>
-                <td>Title</td><td>Category</td><td></td><td>Time Left</td>
-            </thead>
-            <tbody>
-                {% for item in auctions %}{% if not item.finished %}
-                <tr>
-                    <td>
-                        {{ item.name}}
-                        <span class="pull-right">
-                            <a class="btn btn-info btn-xs" href="{{ item.link }}">
-                                <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
-                            </a>
-                        </span>
-                    </td>
-                    <td>
-                        {{ item.type }}
-                        {% if item.type and 'pack' not in item.type and 'single' not in item.type and 'sample' not in item.type %}
-                        <small>
-                            /{{ item.quantity }}
-                        </small>
-                        {% endif %}
-                    </td>
-                    <td><img src="{{ url_for('.static', filename='images/logos/%s.png' % item.site) }}" /></td>
-                    <td>{{ '%sd %sh %sm' % item.time_left }}</td>
-                </tr>
-                {% endif %}{% endfor %}
-            </tbody>
-        </table>
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <button class="btn btn-warning btn-sm" onclick="toggle_visibility('current-auctions');">Open Auctions</button>
-            <div class="btn-group">
-                <a href="#" class="btn btn-default disabled btn-sm">Sorting Options : </a>
-                <a class="btn btn-sm btn-{% if field == 'name' %}success{% else %}primary{% endif %}" href="{{ url_for('search', search_string=search_string, reversed=direction, sort='name') }}">Auction Name</a>
-                <a class="btn btn-sm btn-{% if field == 'price_per_stick' %}success{% else %}primary{% endif %}" href="{{ url_for('search', search_string=search_string, reversed=direction, sort='price_per_stick') }}">Price Per Stick</a>
-                <a class="btn btn-sm btn-{% if field == 'price' %}success{% else %}primary{% endif %}" href="{{ url_for('search', search_string=search_string, reversed=direction, sort='price') }}">Auction Price</a>
-                <a class="btn btn-sm btn-{% if field == 'close' %}success{% else %}primary{% endif %}" href="{{ url_for('search', search_string=search_string, reversed=direction, sort='close') }}">Close Date</a>
-                <a class="btn btn-sm btn-{% if direction %}success{% else %}primary{% endif %}" href="{{ url_for('search', search_string=search_string, reversed=(not direction)|int, sort=field) }}">Reversed Order</a>
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Price Distribution</h3>
+            </div>
+            <div class="panel-body">
+                <div class="container" id="heatmap-placeholder" style="height:100px;"></div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Price History Trending</h3>
+            </div>
+            <div class="panel-body">
+                <div class="container" id="trend-placeholder" style="height:200px"></div>
             </div>
         </div>
     </div>
-    <div class="container" id="history">
-        <table class="table table-striped table-hover">
-            <thead>
-                <td>Title</td><td>Category</td><td>Closed</td><td></td><td>Price</td>
-            </thead>
-            <tbody>
-                {% for item in auctions|sort(attribute=field, reverse=direction) %}{% if item.price and item.finished %}
-                <tr onclick="location.href='{{ item.link }}'">
-                    <td>
-                        {{ item.name}}
-                    </td>
-                    <td>
-                        {{ item.type }}
-                        {% if item.type != None and 'pack' not in item.type and 'single' not in item.type and 'sample' not in item.type %}
-                        <small>
-                            /{{ item.quantity }}
-                        </small>
-                        {% endif %}
-                    </td>
-                    <td>{{ item.close.strftime('%Y-%m-%d') }}</td>
-                    <td><img src="{{ url_for('.static', filename='images/logos/%s.png' % item.site) }}" /></td>
-                    <td>
-                        <big>
-                            {{ '%3.2f' % item.price_per_stick if item.price_per_stick else 'N/A'}}
-                        </big>
-                        <span class="text-muted">
-                            <small>
-                                /{{ '%3.2f' % item.price if item.price else 'N/A'}}
-                            </small>
-                        </span>
-                    </td>
-                </tr>
-                {% endif %}{% endfor %}
-            </tbody>
-        </table>
+    <div class="container" id="current-auctions">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Current Auctions 
+                    <button class="btn btn-info btn-xs pull-right" 
+                            data-toggle="collapse" 
+                            data-target="#open-auctions-view">display
+                    </button>
+                </h3>
+            </div>
+            <div class="panel-body" id="open-auctions-view" aria-expanded="false">
+                <table class="table table-striped">
+                    <thead>
+                        <td>Title</td><td>Category</td><td></td><td>Time Left</td>
+                    </thead>
+                    <tbody>
+                        {% for item in auctions %}{% if not item.finished %}
+                        <tr onclick="location.href='{{ item.link }}'">
+                            <td>
+                                {{ item.name }}
+                            </td>
+                            <td>
+                                {{ item.type }}
+                                {% if item.type and 'pack' not in item.type and 'single' not in item.type and 'sample' not in item.type %}
+                                <small>
+                                    /{{ item.quantity }}
+                                </small>
+                                {% endif %}
+                            </td>
+                            <td><img src="{{ url_for('.static', filename='images/logos/%s.png' % item.site) }}" /></td>
+                            <td>{{ '%sd %sh %sm' % item.time_left }}</td>
+                        </tr>
+                        {% endif %}{% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Auction History</h3>
+            </div>
+            <div class="panel-body">
+                <div class="row">
+                    <div class="btn-group">
+                        <a href="#" class="btn btn-default disabled btn-sm">Sorting Options : </a>
+                        <a class="btn btn-sm btn-{% if field == 'name' %}success{% else %}primary{% endif %}" href="{{ url_for('search', search_string=search_string, reversed=direction, sort='name') }}">Auction Name</a>
+                        <a class="btn btn-sm btn-{% if field == 'price_per_stick' %}success{% else %}primary{% endif %}" href="{{ url_for('search', search_string=search_string, reversed=direction, sort='price_per_stick') }}">Price Per Stick</a>
+                        <a class="btn btn-sm btn-{% if field == 'price' %}success{% else %}primary{% endif %}" href="{{ url_for('search', search_string=search_string, reversed=direction, sort='price') }}">Auction Price</a>
+                        <a class="btn btn-sm btn-{% if field == 'close' %}success{% else %}primary{% endif %}" href="{{ url_for('search', search_string=search_string, reversed=direction, sort='close') }}">Close Date</a>
+                        <a class="btn btn-sm btn-{% if direction %}success{% else %}primary{% endif %}" href="{{ url_for('search', search_string=search_string, reversed=(not direction)|int, sort=field) }}">Reversed Order</a>
+                    </div>
+                </div>
+                <div class="container" id="history">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                            <td>Title</td><td>Category</td><td>Closed</td><td></td><td>Price</td>
+                        </thead>
+                        <tbody>
+                            {% for item in auctions|sort(attribute=field, reverse=direction) %}{% if item.price and item.finished %}
+                            <tr onclick="location.href='{{ item.link }}'">
+                                <td>
+                                    {{ item.name}}
+                                </td>
+                                <td>
+                                    {{ item.type }}
+                                    {% if item.type != None and 'pack' not in item.type and 'single' not in item.type and 'sample' not in item.type %}
+                                    <small>
+                                        /{{ item.quantity }}
+                                    </small>
+                                    {% endif %}
+                                </td>
+                                <td>{{ item.close.strftime('%Y-%m-%d') }}</td>
+                                <td><img src="{{ url_for('.static', filename='images/logos/%s.png' % item.site) }}" /></td>
+                                <td>
+                                    <big>
+                                        {{ '%3.2f' % item.price_per_stick if item.price_per_stick else 'N/A'}}
+                                    </big>
+                                    <span class="text-muted">
+                                        <small>
+                                            /{{ '%3.2f' % item.price if item.price else 'N/A'}}
+                                        </small>
+                                    </span>
+                                </td>
+                            </tr>
+                            {% endif %}{% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 {% endif %}
